--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.114.4",
+    "@react-three/fiber": "8.18.0",
     "@react-three/flex": "^1.0.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -22,7 +23,6 @@
     "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-three-fiber": "^6.0.13",
     "three": "^0.169.0",
     "three-mesh-bvh": "^0.8.2",
     "typescript": "5.1.6"
